fix: align grid layout to yandex project documentation

--- a/styles/global.css
+++ b/styles/global.css
@@ -5,14 +5,14 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  width: 1100px;
+  margin: 0 auto;
   font-family: 'Raleway', sans-serif;
   background-color: #fff;
   color: #000;
 }
 
-h1, h2, h3, h4, h5, h6, p, ul, ol, li {
+h1, h2, h3, h4, h5, h6, p, ul, ol, li, blockquote {
   margin: 0;
   padding: 0;
 }
@@ -22,8 +22,6 @@ a {
   text-decoration: none;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+button {
+  font: inherit;
 }
-
