--- a/styles/style.css
+++ b/styles/style.css
@@ -9,17 +9,23 @@
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
     align-items: center;
-    padding: 92px 50px 0;
+    padding: 92px 0 0;
     margin-bottom: 80px;
+}
+
+.header__menu {
+    justify-self: start;
 }
 
 .header__links-list {
     display: flex;
     gap: 32px;
     list-style: circle;
+    padding-left: 0;
+    margin: 0;
 }
 
 .header__links-list-item:first-child {
@@ -31,18 +37,28 @@
     text-underline-offset: 4px;
 }
 
+.header__link_active {
+    text-decoration: none;
+}
+
+.header__logo {
+    justify-self: center;
+}
+
 .header__logo-image {
     width: 148px;
+    display: block;
 }
 
 .address {
     font-style: normal;
     font-size: 18px;
     line-height: 1.35;
-    max-width: 240px;
 }
 
 .header__address {
+    justify-self: end;
+    max-width: 240px;
     text-align: right;
 }
 
@@ -107,6 +123,8 @@
     font-weight: 400;
     text-transform: uppercase;
     word-spacing: 18px;
+    margin: 0;
+    color: #fff;
 }
 
 .bet-button {
@@ -121,7 +139,6 @@
 }
 
 .lots {
-    padding: 0 50px;
     margin-bottom: 180px;
 }
 
@@ -137,6 +154,7 @@
     display: flex;
     gap: 25px;
     list-style: none;
+    padding: 0;
     margin: 0 0 30px 0;
 }
 
@@ -189,6 +207,7 @@
     font-size: 20px;
     font-weight: 400;
     color: #fff;
+    margin: 0;
     line-height: 1.2;
 }
 
@@ -202,18 +221,19 @@
 }
 
 .about {
-    display: flex;
+    display: grid;
+    grid-template-columns: 334px 1fr;
     gap: 25px;
-    padding: 0 50px;
     margin-bottom: 180px;
 }
 
 .about__column {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .about__column:first-child {
-    max-width: 334px;
+    align-items: center;
 }
 
 .about__logo {
@@ -228,6 +248,7 @@
 
 .about__logo-image {
     width: 148px;
+    display: block;
 }
 
 .about__title {
@@ -249,15 +270,25 @@
 }
 
 .footer {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: start;
-    padding: 0 50px 60px;
+    padding: 0 0 60px;
+}
+
+.footer .address {
+    max-width: 240px;
+}
+
+.footer__menu {
+    justify-self: center;
 }
 
 .footer__menu-list {
     list-style: none;
     text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
 .footer__menu-list-item {
@@ -274,13 +305,20 @@
     text-underline-offset: 4px;
 }
 
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
 .footer__social-list {
     display: flex;
     gap: 48px;
     list-style: none;
+    justify-self: end;
+    padding: 0;
+    margin: 0;
 }
 
 .footer__social-icon {
     width: 48px;
+    display: block;
 }
-
